stop scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body{
     user-select: none;
     -webkit-touch-callout: none;
     -webkit-tap-highlight-color: transparent;
+    overflow: hidden; 
+    height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 #gameCanvas{
